--- a/src/client/app/app.styl
+++ b/src/client/app/app.styl
@@ -40,7 +40,8 @@ div {
   position: absolute;
   width: 150px;
   height: 860px;
-  background-color: grey;
+  background-color: steelblue;
+  opacity: 0.5;
 }
 
 .nav-bar.left {
