--- a/src/client/command/command.css
+++ b/src/client/command/command.css
@@ -1,10 +1,11 @@
 /*Command Tier*/
 #CommandCenterScreen {
-  margin: auto;
+  margin: -820px; 
   margin-top: 5px;
   width: 1640px;
   height: 860px;
-  position: fixed;
+  left: 50%;
+  position: absolute;
   border: 1px black solid;
 }
 
