keys, minor restructuring of actions, mission hooks

--- a/src/client/command/maplocation.styl
+++ b/src/client/command/maplocation.styl
@@ -1,7 +1,9 @@
-.map-location {
+.map-location
   position absolute
   background-color green
   width 150px
   height 70px
   z-index 1
-}
+
+.maplocation-tag
+  display block
