--- a/src/client/agents/agentcard/agentcard.styl
+++ b/src/client/agents/agentcard/agentcard.styl
@@ -105,4 +105,10 @@
   height 40px
   border 1px solid red
 }
-/**/
+
+/*Agent Rankup*/
+.agent-rankup-button
+  position absolute
+  top 0
+  right 0
+  z-index 1
