--- a/src/client/command/maplocation.styl
+++ b/src/client/command/maplocation.styl
@@ -1,6 +1,6 @@
 .map-location
   position absolute
-  background-color green
+  background-color lightseagreen
   width 150px
   height 70px
   z-index 1
