--- a/src/client/help/segments.styl
+++ b/src/client/help/segments.styl
@@ -1,8 +1,16 @@
-div.help-game-segments span ul li {
-  background-image url('../../../assets/img/bullets/bulletpoint-transparent.jpg')
-  background-repeat no-repeat
-  background-position 0px center
-  padding-left 45px
-  padding-top 5px
-  padding-bottom 5px
-}
+div.help-game-segments
+  span
+    ul
+      margin-left 5px
+      li
+        background-image url('../../../assets/img/bullets/bullet-bullet-point-45.png')
+        background-repeat no-repeat
+        background-position 0px center
+        display block
+        margin 4px
+        padding-left 55px
+        padding-top 5px
+        padding-bottom 5px
+
+    p
+      padding 10px
