help content, app styling, intl select

--- a/src/client/agents/agentcard/agentcard.styl
+++ b/src/client/agents/agentcard/agentcard.styl
@@ -1,21 +1,19 @@
 /*Basic Layout*/
-.agent-card {
+.agent-card
   position relative
   list-style-type none
   height 144px
   width 260px
   margin-right 10px
   border 2px solid darkblue
-  background-color deepskyblue
+  background-color aliceblue
   z-index 1
-}
 
-.agent-picture {
+.agent-picture
   position absolute
   left 35px
-}
 
-.agent-equipment-picture-placeholder {
+.agent-equipment-picture-placeholder
   position relative
   width 30px
   height 30px
@@ -25,64 +23,54 @@
   /*background url('../../../assets/img/equipments/equipment_icon_256.jpg')*/
   background-size 100%
   background-repeat no-repeat
-}
 
-.agent-equipment-description-placeholder {
+.agent-equipment-description-placeholder
   position absolute
   left 30px
   width 55px
   height 30px
   border 1px solid maroon
   font-size 10px
-}
 
 /*Showcased Agent Card Layout*/
-.showcased {
+.showcased
   position absolute
-}
 
-.showcased.agent-card {
+.showcased.agent-card
   position absolute
   margin-top 0
   width 425px
   height 265px
-}
 
-.showcased.agent-stat-counter {
+.showcased.agent-stat-counter
   position absolute
   width 25px
   height 35px
   margin 20px
   margin-top 20px
-}
 
-.showcased.agent-stat-counter.operations {
+.showcased.agent-stat-counter.operations
   top 10px
-}
 
-.showcased.agent-stat-counter.electronics {
+.showcased.agent-stat-counter.electronics
   top 85px
-}
 
-.showcased.agent-stat-counter.stealth {
+.showcased.agent-stat-counter.stealth
   top 160px
-}
 
-.showcased.agent-profile {
+.showcased.agent-profile
   top 20px
   left 80px
   width 168px
   height 180px
   border 1px solid grey
-}
 
-.showcased.agent-picture {
+.showcased.agent-picture
   margin-top 20px
   margin-left -20px
   background-size 100%
-}
 
-.showcased.agent-equipment-picture-placeholder {
+.showcased.agent-equipment-picture-placeholder
   width 60px
   height 60px
   border-top-left-radius 4px
@@ -90,21 +78,18 @@
   /*background url('../../../assets/img/equipments/equipment_icon_256.jpg')*/
   background-size 100%
   background-repeat no-repeat
-}
 
-.showcased.agent-equipment-description-placeholder {
+.showcased.agent-equipment-description-placeholder
   left 60px
   width 80px
   height 60px
   font-size 14px
-}
 
-.showcased.agent-label {
+.showcased.agent-label
   top 185px
   width 165px
   height 40px
   border 1px solid red
-}
 
 /*Agent Rankup*/
 .agent-rankup-button
