--- a/src/client/app/navtab.styl
+++ b/src/client/app/navtab.styl
@@ -1,9 +1,19 @@
 .nav-tab
   position absolute
-  width 420px
-  height 40px
-  top -10px
-  left 620px
-  border 2px yellow
-  background-color darkcyan
-  z-index 1
+  background lightgrey
+  border 2px solid black
+  width 710px
+  height 50px
+  top 0px
+  left 50%
+  margin-left -355px
+  padding-left 5%
+  padding-right 5%
+  z-index 100
+
+  ul
+    li
+      a
+        color black
+        font-size 1.2em
+        font-weight bold
