--- a/src/client/briefing/activemission/actualmissioncard.styl
+++ b/src/client/briefing/activemission/actualmissioncard.styl
@@ -1,32 +1,33 @@
-.mission-card.actual {
+.mission-card.actual
   position relative
-  top 5px
+  top 15px
   left 0px
   width 550px
-  height 690px
+  height 680px
   border 2px solid black
-}
 
-.task.actual {
+.mission-title.actual
+  font-size 2.5em
+  text-align center
+
+.task.actual
   position static
-  margin 25px
+  margin 15px
+  margin-right 35px
   width 200px
-}
 
-.mission-result.loss.actual {
+.mission-result.loss.actual
   position absolute
   left 0px
   bottom 0px
   width 274px
   height 75px
   border 1px solid darkred
-}
 
-.mission-result.reward.actual {
+.mission-result.reward.actual
   position absolute
   right 0px
   bottom 0px
   width 274px
   height 75px
   border 1px solid darkgreen
-}
