--- a/src/client/briefing/activemission/agentassignment.styl
+++ b/src/client/briefing/activemission/agentassignment.styl
@@ -1,28 +1,23 @@
-.agent-assignment {
+.agent-assignment
   position absolute
   list-style none
   width 265px
   height 150px
   margin 3px
   border 1px solid darkslategrey
-}
 
-#AgentAssignment1 {
-  top 300px
+#AgentAssignment1
+  top 285px
   left 5px
-}
 
-#AgentAssignment2 {
-  top 300px
+#AgentAssignment2
+  top 285px
   left 275px
-}
 
-#AgentAssignment3 {
-  top 455px
+#AgentAssignment3
+  top 440px
   left 5px
-}
 
-#AgentAssignment4 {
-  top 455px
+#AgentAssignment4
+  top 440px
   left 275px
-}
