--- a/src/client/command/mainscreen.styl
+++ b/src/client/command/mainscreen.styl
@@ -1,4 +1,7 @@
 .main-screen
+  background url('../../../assets/img/bg/worldheatmapgrey.png')
+  background-size 1640px 860px
+  background-repeat no-repeat
   position absolute
   width 1640px
   height 860px
@@ -6,9 +9,8 @@
 
 .main-screen img
   width 1640px
-  height 1020px
+  height 860px
   z-index -1
-
 
 ::-webkit-scrollbar
   width 12px  /* for vertical scrollbars */
