--- a/src/client/help/actions.styl
+++ b/src/client/help/actions.styl
@@ -5,12 +5,32 @@ div.help-mission-actions
       li
         background-image url('../../../assets/img/bullets/bullet-bullet-point-45.png')
         background-repeat no-repeat
+        background-size 70px 70px
         background-position 0px center
         display block
+        height 70px
         margin 4px
-        padding-left 55px
+        padding-left 80px
         padding-top 5px
         padding-bottom 5px
+      li.pursuit
+        background-image url('../../../assets/img/missions/actions/pursuit.jpg')
+      li.hit
+        background-image url('../../../assets/img/missions/actions/hit.jpg')
+      li.close_combat
+        background-image url('../../../assets/img/missions/actions/close_combat.jpg')
+      li.decipher
+        background-image url('../../../assets/img/missions/actions/decipher.jpg')
+      li.tap
+        background-image url('../../../assets/img/missions/actions/tap.jpg')
+      li.monitor
+        background-image url('../../../assets/img/missions/actions/monitor.jpg')
+      li.puppet
+        background-image url('../../../assets/img/missions/actions/puppet.jpg')
+      li.infiltrate
+        background-image url('../../../assets/img/missions/actions/infiltrate.jpg')
+      li.hide
+        background-image url('../../../assets/img/missions/actions/hide.jpg')
 
     p
       padding 10px
