--- a/src/client/mission/missioncard/missiontitle.styl
+++ b/src/client/mission/missioncard/missiontitle.styl
@@ -1,18 +1,17 @@
-.mission-title {
-  color white
+.mission-title
+  color darkslategray
   font-weight bold
+  font-size 1.1em
+  text-align center
   width 548px
   height 60px
-  background-color orangered
+  background-color cadetblue
   border 1px solid black
-}
 
-.mission-title.briefing {
+.mission-title.briefing
   width 186px
   height 35px
-}
 
-.mission-title.special {
+.mission-title.special
   width 186px
   height 35px
-}
