--- a/src/client/mission/missioncard/tasks/task.styl
+++ b/src/client/mission/missioncard/tasks/task.styl
@@ -1,26 +1,22 @@
-.task {
+.task
   display inline-block
   width 330px
   height 105px
   margin-top 50px
   margin-left 40px
-}
 
-.task.briefing {
+.task.briefing
   width 170px
   height 30px
   margin 5px
-}
 
-.task.current {
-  background-color cornflowerblue
+.task.current
+  background-color grey
   padding-top 10px
   padding-left 15px
   margin-left 0px
-}
 
-.task.special {
+.task.special
   width 165px
   height 30px
   margin 5px
-}
