--- a/src/client/agents/armoryscreen.styl
+++ b/src/client/agents/armoryscreen.styl
@@ -1,6 +1,7 @@
-#ArmoryScreen {
-  position relative
+#ArmoryScreen
+  position absolute
+  left 50%
+  margin-left -820px
   width 1640px
   height 860px
   border 1px black solid
-}
