--- a/src/client/agents/scrollbar/agentscrollbarwithnavbuttons.styl
+++ b/src/client/agents/scrollbar/agentscrollbarwithnavbuttons.styl
@@ -1,15 +1,13 @@
-#AgentScrollBarWithNavButtons {
+#AgentScrollBarWithNavButtons
   position absolute
   padding 0
-  top 15px
+  top 25px
   left 108px
   width 1120px
   height 153px
-}
 
-#AgentScrollBarWithNavButtons.briefing {
+#AgentScrollBarWithNavButtons.briefing
   position absolute
   top 700px
   left 260px
   margin 5px
-}
