--- a/src/client/app/app.styl
+++ b/src/client/app/app.styl
@@ -15,7 +15,7 @@
 html,
 body
   height 100%
-  background-color teal
+  background-color lightgrey
   font-family 'Segoe UI', 'Lucida Grande','Ubuntu','sans-serif'
   font-size 16px
   line-height 1.5
@@ -64,7 +64,6 @@ div
     outline-style none
 
   a
-    color #346392
     text-decoration none
 
     &hovernot(.active)
