--- a/src/client/briefing/briefing.styl
+++ b/src/client/briefing/briefing.styl
@@ -1,5 +1,7 @@
 #BriefingScreen
-  position relative
+  position absolute
+  left 50%
+  margin-left -820px
   width 1640px
   height 860px
   border 2px solid darkblue
