--- a/src/client/dashboard/dashboard.styl
+++ b/src/client/dashboard/dashboard.styl
@@ -14,9 +14,11 @@ div.dashboard-item
   right 0px
 
 #CommandDashboardScreen
-  position relative
+  position absolute
   width 1640px
   height 860px
+  left 50%
+  margin-left -820px
   border 1px solid red
 
 #CountryStatsOverview
