--- a/src/client/help/helpscreen.styl
+++ b/src/client/help/helpscreen.styl
@@ -1,6 +1,15 @@
+#HelpScreen
+  position absolute
+  width 1640px
+  height 860px
+  left 50%
+  margin-left -820px
+  border 2px solid black
+
 .help-content
   position relative
   left 150px
   width 1340px
-  border 3px solid black
+  height 858px
+  overflow-x hidden
   font-weight bold
