--- a/src/client/mission/missioncard/actions.styl
+++ b/src/client/mission/missioncard/actions.styl
@@ -1,284 +1,241 @@
 /*actions subTier*/
-.action {
+.action
   width 85px
   height 85px
   margin-right 10px
   border 2px solid red
-}
 
-.action.actual {
+.action.actual
   width 55px
   height 55px
   margin-right 10px
   border 1px solid darkred
-}
 
-.action.briefing {
+.action.briefing
   width 25px
   height 25px
   margin-left 10px
-}
 
-.action.special {
+.action.special
   width 25px
   height 25px
   margin-left 10px
-}
 
-.action.empty.special {
+.action.empty.special
   background url('../../../../assets/img/missions/actions/empty.jpg')
   background-size 20px 20px
   background-repeat no-repeat
-}
 
-.action.monitor.special {
+.action.monitor.special
   background url('../../../../assets/img/missions/actions/monitor.jpg')
   background-size 20px 20px
   background-repeat no-repeat
-}
 
-.action.monitor.actual {
+.action.monitor.actual
   background url('../../../../assets/img/missions/actions/monitor.jpg')
   background-size 55px 55px
   background-repeat no-repeat
-}
 
-.action.monitor.mission {
+.action.monitor.mission
   background url('../../../../assets/img/missions/actions/monitor.jpg')
   background-size 100% 100%
   background-repeat no-repeat
-}
 
-.action.monitor.briefing {
+.action.monitor.briefing
   background url('../../../../assets/img/missions/actions/monitor.jpg')
   background-size 25px 25px
   background-repeat no-repeat
-}
 
-.action.pursuit.special {
+.action.pursuit.special
   background url('../../../../assets/img/missions/actions/pursuit.jpg')
   background-size 20px 20px
   background-repeat no-repeat
-}
 
-.action.pursuit.actual {
+.action.pursuit.actual
   background url('../../../../assets/img/missions/actions/pursuit.jpg')
   background-size 55px 55px
   background-repeat no-repeat
-}
 
-.action.pursuit.mission {
+.action.pursuit.mission
   background url('../../../../assets/img/missions/actions/pursuit.jpg')
   background-size 100% 100%
   background-repeat no-repeat
-}
 
-.action.pursuit.briefing {
+.action.pursuit.briefing
   background url('../../../../assets/img/missions/actions/pursuit.jpg')
   background-size 25px 25px
   background-repeat no-repeat
-}
 
-.action.hide.special {
+
+.action.hide.special
   background url('../../../../assets/img/missions/actions/hide.jpg')
   background-size 20px 20px
   background-repeat no-repeat
-}
 
-.action.hide.actual {
+
+.action.hide.actual
   background url('../../../../assets/img/missions/actions/hide.jpg')
   background-size 55px 55px
   background-repeat no-repeat
-}
 
-.action.hide.mission {
+
+.action.hide.mission
   background url('../../../../assets/img/missions/actions/hide.jpg')
   background-size 100% 100%
   background-repeat no-repeat
-}
 
-.action.hide.briefing {
+
+.action.hide.briefing
   background url('../../../../assets/img/missions/actions/hide.jpg')
   background-size 25px 25px
   background-repeat no-repeat
-}
 
-.action.decipher.special {
+.action.decipher.special
   background url('../../../../assets/img/missions/actions/decipher.jpg')
   background-size 20px 20px
   background-repeat no-repeat
-}
 
-.action.decipher.actual {
+.action.decipher.actual
   background url('../../../../assets/img/missions/actions/decipher.jpg')
   background-size 55px 55px
   background-repeat no-repeat
-}
 
-.action.decipher.mission {
+.action.decipher.mission
   background url('../../../../assets/img/missions/actions/decipher.jpg')
   background-size 100% 100%
   background-repeat no-repeat
-}
 
-.action.decipher.briefing {
+.action.decipher.briefing
   background url('../../../../assets/img/missions/actions/decipher.jpg')
   background-size 25px 25px
   background-repeat no-repeat
-}
 
-.action.improv.special {
+.action.improv.special
   background url('../../../../assets/img/missions/actions/improv.jpg')
   background-size 20px 20px
   background-repeat no-repeat
-}
 
-.action.improv.actual {
+.action.improv.actual
   background url('../../../../assets/img/missions/actions/improv.jpg')
   background-size 55px 55px
   background-repeat no-repeat
-}
 
-.action.improv_el.actual.electronics {
+.action.improv_el.actual.electronics
   background url('../../../../assets/img/missions/actions/improv_el.jpg')
   background-size 55px 55px
   background-repeat no-repeat
-}
 
-.action.improv.mission {
+.action.improv.mission
   background url('../../../../assets/img/missions/actions/improv.jpg')
   background-size 100% 100%
   background-repeat no-repeat
-}
 
-.action.improv_el.mission.electronics {
+.action.improv_el.mission.electronics
   background url('../../../../assets/img/missions/actions/improv_el.jpg')
   background-size 100% 100%
   background-repeat no-repeat
-}
 
-.action.improv.briefing {
+.action.improv.briefing
   background url('../../../../assets/img/missions/actions/improv.jpg')
   background-size 25px 25px
   background-repeat no-repeat
-}
 
-.action.close_combat.special {
+.action.close_combat.special
   background url('../../../../assets/img/missions/actions/close_combat.jpg')
   background-size 20px 20px
   background-repeat no-repeat
-}
 
-.action.close_combat.actual {
+.action.close_combat.actual
   background url('../../../../assets/img/missions/actions/close_combat.jpg')
   background-size 55px 55px
   background-repeat no-repeat
-}
 
-.action.close_combat.mission {
+.action.close_combat.mission
   background url('../../../../assets/img/missions/actions/close_combat.jpg')
   background-size 100% 100%
   background-repeat no-repeat
-}
 
-.action.close_combat.briefing {
+.action.close_combat.briefing
   background url('../../../../assets/img/missions/actions/close_combat.jpg')
   background-size 25px 25px
   background-repeat no-repeat
-}
 
-.action.infiltrate.special {
+.action.infiltrate.special
   background url('../../../../assets/img/missions/actions/infiltrate.jpg')
   background-size 20px 20px
   background-repeat no-repeat
-}
 
-.action.infiltrate.actual {
+.action.infiltrate.actual
   background url('../../../../assets/img/missions/actions/infiltrate.jpg')
   background-size 55px 55px
   background-repeat no-repeat
-}
 
-.action.infiltrate.mission {
+.action.infiltrate.mission
   background url('../../../../assets/img/missions/actions/infiltrate.jpg')
   background-size 100% 100%
   background-repeat no-repeat
-}
 
-.action.infiltrate.briefing {
+.action.infiltrate.briefing
   background url('../../../../assets/img/missions/actions/infiltrate.jpg')
   background-size 25px 25px
   background-repeat no-repeat
-}
 
-.action.hit.special {
+.action.hit.special
   background url('../../../../assets/img/missions/actions/hit.jpg')
   background-size 20px 20px
   background-repeat no-repeat
-}
 
-.action.hit.actual {
+.action.hit.actual
   background url('../../../../assets/img/missions/actions/hit.jpg')
   background-size 55px 55px
   background-repeat no-repeat
-}
 
-.action.hit.mission {
+.action.hit.mission
   background url('../../../../assets/img/missions/actions/hit.jpg')
   background-size 100% 100%
   background-repeat no-repeat
-}
 
-.action.hit.briefing {
+.action.hit.briefing
   background url('../../../../assets/img/missions/actions/hit.jpg')
   background-size 25px 25px
   background-repeat no-repeat
-}
 
-.action.tap.special {
+.action.tap.special
   background url('../../../../assets/img/missions/actions/tap.jpg')
   background-size 20px 20px
   background-repeat no-repeat
-}
 
-.action.tap.actual {
+.action.tap.actual
   background url('../../../../assets/img/missions/actions/tap.jpg')
   background-size 55px 55px
   background-repeat no-repeat
-}
 
-.action.tap.mission {
+.action.tap.mission
   background url('../../../../assets/img/missions/actions/tap.jpg')
   background-size 100% 100%
   background-repeat no-repeat
-}
 
-.action.tap.briefing {
+.action.tap.briefing
   background url('../../../../assets/img/missions/actions/tap.jpg')
   background-size 25px 25px
   background-repeat no-repeat
-}
 
-.action.puppet.special {
+.action.puppet.special
   background url('../../../../assets/img/missions/actions/puppet.jpg')
   background-size 20px 20px
   background-repeat no-repeat
-}
 
-.action.puppet.actual {
+.action.puppet.actual
   background url('../../../../assets/img/missions/actions/puppet.jpg')
   background-size 55px 55px
   background-repeat no-repeat
-}
 
-.action.puppet.mission {
+.action.puppet.mission
   background url('../../../../assets/img/missions/actions/puppet.jpg')
   background-size 100% 100%
   background-repeat no-repeat
-}
 
-.action.puppet.briefing {
+.action.puppet.briefing
   background url('../../../../assets/img/missions/actions/puppet.jpg')
   background-size 25px 25px
   background-repeat no-repeat
-}
