--- a/src/client/app/app.styl
+++ b/src/client/app/app.styl
@@ -20,7 +20,23 @@ body
   font-size 16px
   line-height 1.5
 
+input
+  -webkit-appearance textfield
+  padding 1px
+  background-color white
+  border 2px inset
+  cursor auto
+  -webkit-rtl-ordering logical
+  -webkit-user-select text
+  margin 0em
+  text-rendering auto
+  color initial
+  letter-spacing normal
+  word-spacing normal
+  text-transform none
 
+input[type="hidden" i]
+  display none
 
 ul
   display inline-block
