--- a/src/client/mission/missioncard/missioncard.styl
+++ b/src/client/mission/missioncard/missioncard.styl
@@ -1,11 +1,10 @@
-.mission-card {
+.mission-card
   display inline-block
   margin 0
   padding 0
   background-color silver
-}
 
-.mission-card.briefing {
+.mission-card.briefing
   list-style none
   position relative
   margin 2px
@@ -15,12 +14,10 @@
   display inline-block
   overflow-x hidden
   overflow-y hidden
-}
 
-.mission-card.special {
+.mission-card.special
   position relative
   margin 4px
   width 190px
   height 235px
   border 2px solid black
-}
