--- a/src/client/support/supportscreen.styl
+++ b/src/client/support/supportscreen.styl
@@ -6,30 +6,14 @@
   margin-left -820px
   border 2px solid black
 
-#PostInputTitle
+.posts-list
   position absolute
+  top 60px
+  left 150px
   display block
-  width 440px
-  bottom 220px
-  left 400px
-
-#PostInputText
-  position absolute
-  display block
-  width 600px
-  height 170px
-  bottom 40px
-  left 400px
-
-#PostButton
-  position absolute
-  bottom 10px
-  left 400px
-
-#PostsList
-  position absolute
-  top 100px
-  left 100px
+  height 690px
+  width 1340px
+  overflow-x hidden
   li
     display block
 
