--- a/src/client/help/helpscreen.styl
+++ b/src/client/help/helpscreen.styl
@@ -4,7 +4,7 @@
   height 860px
   left 50%
   margin-left -820px
-  border 2px solid black
+  border 1px solid black
 
 .help-content
   position relative
@@ -13,3 +13,4 @@
   height 858px
   overflow-x hidden
   font-weight bold
+  text-align center
