--- a/src/client/equipments/equipment.css
+++ b/src/client/equipments/equipment.css
@@ -61,13 +61,85 @@
 
 .equipment-stock-item {
   position: absolute;
-  border: 1px solid darkblue;
+  border: 1px solid black;
   left: 50px;
   width: 80px;
   height: 80px;
   background: url('../../../assets/img/equipments/equipment_icon_256.jpg');
   background-size: 100% 100%;
   background-repeat: no-repeat;
+}
+
+#HiredGun > .equipment-stock-item {
+  background: url('../../../assets/img/equipments/hired_gun_256.png');
+  background-color: salmon;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  box-shadow: inset 0 0 10px black;
+}
+
+#HeavyArms > .equipment-stock-item {
+  background: url('../../../assets/img/equipments/heavy_arms_256.png');
+  background-color: salmon;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  box-shadow: inset 0 0 10px black;
+}
+
+#ProtectiveGear > .equipment-stock-item {
+  background: url('../../../assets/img/equipments/protective_gear_256.png');
+  background-color: salmon;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  box-shadow: inset 0 0 10px black;
+}
+
+#FakePassports > .equipment-stock-item {
+  background: url('../../../assets/img/equipments/passports_256.png');
+  background-color: gold;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  box-shadow: inset 0 0 10px black;
+}
+
+#DrugsControl > .equipment-stock-item {
+  background: url('../../../assets/img/equipments/drug_control_256.png');
+  background-color: gold;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  box-shadow: inset 0 0 10px black;
+}
+
+#DCP > .equipment-stock-item {
+  background: url('../../../assets/img/equipments/damage_control_256.png');
+  background-color: gold;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  box-shadow: inset 0 0 10px black;
+}
+
+#HandyKit > .equipment-stock-item {
+  background: url('../../../assets/img/equipments/electronics_kit_256.png');
+  background-color: darkcyan;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  box-shadow: inset 0 0 10px black;
+}
+
+#CustomTools > .equipment-stock-item {
+  background: url('../../../assets/img/equipments/custom_tools_196.png');
+  background-color: darkcyan;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  box-shadow: inset 0 0 10px black;
+}
+
+#WPAS > .equipment-stock-item {
+  background: url('../../../assets/img/equipments/WPAS_256.png');
+  background-color: darkcyan;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  box-shadow: inset 0 0 10px black;
 }
 
 .equipment-stock-counter {
