--- a/src/client/mission/missioncard/results/missionresult.styl
+++ b/src/client/mission/missioncard/results/missionresult.styl
@@ -1,2 +1,12 @@
 .mission-result
-  display block
+  padding-left 5px
+
+li.mission-result.reward.task
+  margin 0
+  padding 0
+  height 30px
+
+li.mission-result.loss.task
+  margin 0
+  padding 0
+  height 30px
