map styling, styling - other, dashboard; buycontacts added

--- a/src/client/agents/agentcard/agentcard.styl
+++ b/src/client/agents/agentcard/agentcard.styl
@@ -20,7 +20,7 @@
   border 1px solid green
   border-top-left-radius 2px
   border-bottom-left-radius 2px
-  background-image url('../../../../assets/img/equipments/equipment_icon_256.jpg')
+  background-image url('../../../../assets/img/equipments/equipment_icon_256.png')
   background-size 100% 100%
   background-repeat no-repeat
 
@@ -32,7 +32,7 @@
   box-shadow 0 0 10px black inset
 
 .agent-equipment-picture-placeholder.DrugsControl
-  background-image url('../../../../assets/img/equipments/drug_control_256.png')
+  background-image url('../../../../assets/img/equipments/drugs_control_256.png')
   background-size 100% 100%
   background-repeat no-repeat
   background-color gold
@@ -138,7 +138,7 @@
   height 60px
   border-top-left-radius 4px
   border-bottom-left-radius 4px
-  /*background url('../../../assets/img/equipments/equipment_icon_256.jpg')*/
+  /*background url('../../../assets/img/equipments/equipment_icon_256.png')*/
   background-size 100%
   background-repeat no-repeat
 
