--- a/src/client/command/mainscreen.styl
+++ b/src/client/command/mainscreen.styl
@@ -1,7 +1,8 @@
 .main-screen
-  background url('../../../assets/img/bg/worldheatmapgrey.png')
+  background url('../../../assets/img/bg/worldheatmapgrey_color2.png')
   background-size 1640px 860px
   background-repeat no-repeat
+  background-color blue
   position absolute
   width 1640px
   height 860px
