--- a/src/client/dashboard/dashboard.styl
+++ b/src/client/dashboard/dashboard.styl
@@ -29,38 +29,22 @@ div.dashboard-item
   width 339px
   border 1px solid crimson
 
+  table
+    height 250px
+    width 339px
+    text-align center
+
+  table, th, td
+    border 1px solid black
+
+  th
+    height 39px
+    background-color yellow
+    color white
+
+  td
+    height 34px
+
 #DashboardContent
   position relative
   left 150px
-
-#PlayerLabel
-  position absolute
-  left 150px
-  height 150px
-  width 900px
-  border 1px solid darkslateblue
-
-#PlayerLiquidResources
-  position absolute
-  right 0px
-  height 150px
-  width 287px
-  border 1px solid magenta
-
-#PlayerName
-  position absolute
-  height 50px
-  width 200px
-  border 1px solid blue
-
-#PlayerPicture
-  position absolute
-  height 150px
-  width 150px
-  border 1px solid darkorange
-
-#PlayerStrip
-  position absolute
-  height 150px
-  width 1340px
-  border 1px solid darkgrey
