--- a/src/client/help/actions.styl
+++ b/src/client/help/actions.styl
@@ -2,6 +2,7 @@ div.help-mission-actions
   span
     ul
       margin-left 5px
+      display block
       li
         background-image url('../../../assets/img/bullets/bullet-bullet-point-45.png')
         background-repeat no-repeat
@@ -31,6 +32,18 @@ div.help-mission-actions
         background-image url('../../../assets/img/missions/actions/infiltrate.jpg')
       li.hide
         background-image url('../../../assets/img/missions/actions/hide.jpg')
+      li.improvAll
+        background-image url('../../../assets/img/missions/actions/improv_all_colors.jpg')
+      li.failAll
+        background-image url('../../../assets/img/missions/actions/fail_all_colors.jpg')
+
+      li.operations
+        background-color red
+      li.electronics
+        background-color yellow
+      li.stealth
+        background-color green
+
 
     p
       padding 10px
