--- a/src/client/help/equipments.styl
+++ b/src/client/help/equipments.styl
@@ -11,6 +11,34 @@ div.help-equipments
         padding-left 55px
         padding-top 5px
         padding-bottom 5px
+      li.agent-equipment
+        background-image url('../../../assets/img/equipments/equipment_icon_256.png')
+        background-repeat no-repeat
+        background-position 0px center
+        background-size 55px 55px
+        display block
+        height 55px
+      li.agent-equipment.HiredGun
+        background-image url('../../../assets/img/equipments/hired_gun_256.png')
+      li.agent-equipment.HeavyArms
+        background-image url('../../../assets/img/equipments/heavy_arms_256.png')
+      li.agent-equipment.ProtectiveGear
+        background-image url('../../../assets/img/equipments/protective_gear_256.png')
+      li.agent-equipment.HandyKit
+        background-image url('../../../assets/img/equipments/electronics_kit_256.png')
+      li.agent-equipment.CustomTools
+        background-image url('../../../assets/img/equipments/custom_tools_196.png')
+      li.agent-equipment.WPAS
+        background-image url('../../../assets/img/equipments/WPAS_256.png')
+      li.agent-equipment.FakePassports
+        background-image url('../../../assets/img/equipments/passports_256.png')
+      li.agent-equipment.DrugsControl
+        background-image url('../../../assets/img/equipments/drugs_control_256.png')
+      li.agent-equipment.DCP
+        background-image url('../../../assets/img/equipments/damage_control_256.png')
+
+
+
 
     p
       padding 10px
