--- a/src/client/help/helpscreen.styl
+++ b/src/client/help/helpscreen.styl
@@ -8,9 +8,12 @@
 
 .help-content
   position relative
-  left 150px
-  width 1340px
+  left 370px
+  width 900px
   height 858px
   overflow-x hidden
   font-weight bold
   text-align center
+
+.help-content::-webkit-scrollbar
+  display none
