styling changes and game logic implementations

--- a/src/client/app/app.styl
+++ b/src/client/app/app.styl
@@ -53,9 +53,13 @@ div
   margin 1em 2em
 
   header
-    height 80px
+    position absolute
+    height 40px
     text-align center
-    min-width 1640px
+    top 0px
+    width 1640px
+    left 50%
+    margin-left -820px
 
   > header
     h4
@@ -89,7 +93,6 @@ div
       font-weight bold
 
   button
-    background-color #6496c8
     border none
     border-radius 1em
     color #fff
