--- a/src/client/app/navtab.styl
+++ b/src/client/app/navtab.styl
@@ -15,3 +15,27 @@
         color black
         font-size 1.2em
         font-weight bold
+
+.logout
+  position absolute
+  width 140px
+  left 0
+  top 2px
+
+.logout-button
+  background-color red
+
+.login-button
+  position absolute
+  width 120px
+  left 0
+  top 2px
+  background-color royalblue
+
+.signup-button
+  position absolute
+  width 120px
+  left 10%
+  margin-left -10px
+  top 2px
+  background-color gold
