--- a/src/client/auth/login.styl
+++ b/src/client/auth/login.styl
@@ -1,4 +1,7 @@
 .login
+  position absolute
+  top 40px
+
   form
     width 20em
 
@@ -8,6 +11,7 @@
 
   button
     font-size .75em
+    background-color royalblue
 
   .error-message
     color red
