--- a/src/client/dashboard/agentswindow/agentsinprison.styl
+++ b/src/client/dashboard/agentswindow/agentsinprison.styl
@@ -8,3 +8,10 @@
 
 li.agent-in-prison
   display block
+  margin-top 8px
+  margin-bottom 7px
+
+  button
+    position absolute
+    right 0px
+    background-color green
