--- a/src/client/app/language.select.styl
+++ b/src/client/app/language.select.styl
@@ -1,4 +1,39 @@
 .Dropdown
+  background-color aliceblue
+  border 1px solid grey
+  color #000
+  display block
+  font-weight bold
+  line-height 1.8
+  margin 0 10px 0 0
+  padding 0 1em
   position absolute
-  top 0
   right 0
+  transition all 1000ms ease
+  top 1px
+  z-index 1000
+
+  div.Dropdown-control
+    display block
+    z-index 1000
+
+    div.placeholder
+      display block
+      z-index 1000
+
+  div.Dropdown-menu
+    box-sizing border-box
+    display block
+    max-height 200px
+    padding 1px
+    padding-right 5px
+    z-index 1000
+
+    div.Dropdown-option
+      background-color aliceblue
+      box-sizing border-box
+      cursor pointer
+      display block
+      padding 1px
+      padding-right 5px
+      z-index 1000px
