--- a/src/client/command/mainscreen.styl
+++ b/src/client/command/mainscreen.styl
@@ -2,7 +2,7 @@
   background url('../../../assets/img/bg/worldheatmapgrey_color2.png')
   background-size 1640px 860px
   background-repeat no-repeat
-  background-color blue
+  background-color aqua
   position absolute
   width 1640px
   height 860px
