--- a/src/client/command/mainscreen.styl
+++ b/src/client/command/mainscreen.styl
@@ -13,12 +13,15 @@
   height 860px
   z-index -1
 
+::-moz-scrollbar,
 ::-webkit-scrollbar
   width 12px  /* for vertical scrollbars */
   height 12px /* for horizontal scrollbars */
 
+::-moz-scrollbar,
 ::-webkit-scrollbar-track
   background rgba(0, 0, 0, 0.1)
 
+::-moz-scrollbar,
 ::-webkit-scrollbar-thumb
   background: rgba(0, 0, 0, 0.5)
