--- a/src/client/dashboard/countrieswindow/countrieswindow.styl
+++ b/src/client/dashboard/countrieswindow/countrieswindow.styl
@@ -5,3 +5,19 @@
   height 250px
   width 339px
   border 1px solid crimson
+
+  table
+    height 250px
+    width 339px
+    text-align center
+
+  table, th, td
+    border 1px solid black
+
+  th
+    height 39px
+    background-color yellow
+    color white
+
+  td
+    height 34px
