--- a/src/client/agents/agentequipcontent.styl
+++ b/src/client/agents/agentequipcontent.styl
@@ -1,7 +1,26 @@
-#AgentEquipContent {
+#AgentEquipContent
   position absolute
   top 0px
   left 150px
   width 1336px
   height 860px
-}
+
+  #ArmoryGameCashCounter
+    position absolute
+    top 200px
+    left 200px
+    font-weight bold
+    font-size 1.4em
+
+  #UnequipAll
+    position absolute
+    top 300px
+    left 200px
+    background-color darkgrey
+
+  #ActiveMissionTasks
+    position absolute
+    top 200px
+    left 910px
+    width 540px
+    height 300px
