cosmetic changes, placeholder messages for agent for hire etc.

--- a/src/client/agents/scrollbar/agentscrollbar.styl
+++ b/src/client/agents/scrollbar/agentscrollbar.styl
@@ -8,18 +8,24 @@
   width 6000px
   height 146px
 
-
 .agent-scroll-bar
   list-style none
   display inline-block
   margin 0
   padding 0
   left 0
-  width 980px
+  width 1055px
   height 146px
   overflow-x hidden
   overflow-y hidden
 
-
-.agent-scroll-bar.briefing
-  width 980px
+.agent-scroll-bar.on-mission
+  list-style none
+  display inline-block
+  margin 0
+  padding 0
+  left 0
+  width 259px
+  height 143px
+  overflow-x hidden
+  overflow-y hidden
