--- a/src/client/command/command.styl
+++ b/src/client/command/command.styl
@@ -6,7 +6,7 @@
   height 860px
   left 50%
   position absolute
-  border 1px black solid
+  border 1px inset black solid
 
 .game-title
   position absolute
