--- a/src/client/dashboard/agentswindow/agentswindow.styl
+++ b/src/client/dashboard/agentswindow/agentswindow.styl
@@ -4,3 +4,16 @@
   height 250px
   width 999px
   border 1px solid black
+
+.no-agent-for-hire
+  position relative
+  height 144px
+  width 260px
+  margin-right 5px
+  border 2px solid darkblue
+  background-color aliceblue
+  display flex
+  align-items center
+  justify-content center
+  opacity 0.7
+  z-index 1
