--- a/src/client/mission/tabletoptier/tabletoptier.styl
+++ b/src/client/mission/tabletoptier/tabletoptier.styl
@@ -1,8 +1,14 @@
-#TableTopTier {
+#TableTopTier
   position absolute
   top 0px
   left 480px
   width 580px
   height 860px
-  border 1px solid black
-}
+
+.mission-incountry
+  position absolute
+  width 20  5px
+  height 20px
+  text-align right
+  font-size 22px
+  right 0
