--- a/src/client/mission/tasktier/tasktier.styl
+++ b/src/client/mission/tasktier/tasktier.styl
@@ -1,8 +1,6 @@
-#TaskTier {
+#TaskTier
   position absolute
   top 0px
   left 150px
   width 330px
   height 860px
-  border 1px solid yellowgreen
-}
