--- a/src/client/app/app.styl
+++ b/src/client/app/app.styl
@@ -15,7 +15,7 @@
 html,
 body
   height 100%
-  background-color lightgrey
+  background-color cyan
   font-family 'Segoe UI', 'Lucida Grande','Ubuntu','sans-serif'
   font-size 16px
   line-height 1.5
