--- a/src/client/mission/tabletoptier/tabletop/tabletop.styl
+++ b/src/client/mission/tabletoptier/tabletop/tabletop.styl
@@ -1,17 +1,22 @@
-#TableTop {
+#TableTop
   position relative
   width 550px
   height 580px
   margin-left 10px
   margin-top 50px
   border 2px solid maroon
-}
 
-.taskcomplete-button {
+#MissionStartStatus
+  position absolute
+  left 140px
+  top 160px
+  font-size 1.3em
+  opacity 0.7
+
+.taskcomplete-button
   position absolute
   width 180px
   height 100px
   border 2px solid black
   bottom 1px
   right 185px
-}
