layout and formating changes, better player experience in mind

--- a/src/client/app/language.select.styl
+++ b/src/client/app/language.select.styl
@@ -1,16 +1,20 @@
 .Dropdown
   background-color aliceblue
-  border 1px solid grey
+  border none
+  border-radius 1em
   color #000
   display block
   font-weight bold
+  height 25px
   line-height 1.8
   margin 0 10px 0 0
   padding 0 1em
   position absolute
-  right 0
+  right 10px
+  text-align center
   transition all 1000ms ease
-  top 1px
+  top 10px
+  width 100px
   z-index 1000
 
   div.Dropdown-control
@@ -31,9 +35,12 @@
 
     div.Dropdown-option
       background-color aliceblue
+      border-radius 1em
       box-sizing border-box
       cursor pointer
       display block
+      height 25px
       padding 1px
       padding-right 5px
+      width 100px
       z-index 1000px
