--- a/src/client/auth/login.styl
+++ b/src/client/auth/login.styl
@@ -1,6 +1,20 @@
+.login-page
+  margin -820px
+  margin-top 5px
+  width 1640px
+  height 860px
+  left 50%
+  position absolute
+
 .login
   position absolute
-  top 40px
+  width 280px
+  height 130px
+  left 630px
+  top 335px
+
+  display inline-block
+  zoom 1
 
   form
     width 20em
@@ -15,3 +29,13 @@
 
   .error-message
     color red
+
+.logout-button
+  background-color red
+
+.login-button
+  position absolute
+  width 120px
+  left 0
+  top 2px
+  background-color royalblue
