--- a/src/client/command/mainscreen.styl
+++ b/src/client/command/mainscreen.styl
@@ -1,14 +1,10 @@
 .main-screen
   background url('../../../assets/img/bg/worldheatmapgrey_color2.png')
-  background-size 1640px 860px
+  background-size 1230px 645px
   background-repeat no-repeat
   background-color aqua
-  position absolute
-  width 1640px
-  height 860px
+  height 645px
+  left 205px
   overflow auto
-
-.main-screen img
-  width 1640px
-  height 860px
-  z-index -1
+  position absolute
+  width 1230px
