--- a/src/client/dashboard/dashboard.styl
+++ b/src/client/dashboard/dashboard.styl
@@ -1,11 +1,18 @@
-#CommandDashboardScreen
+#DashboardScreen
   position absolute
   width 1640px
   height 860px
   left 50%
   margin-left -820px
-  border 1px solid red
 
 #DashboardContent
   position relative
   left 150px
+
+#DashboardScreenLogout
+  position absolute
+  left 10px
+  bottom 10px
+  width 120px
+  height 50px
+  font-size 1.4em
