new features implementation in dashboard, armory - enhancements integration

--- a/src/client/dashboard/enhancementswindow/enhancements.window.styl
+++ b/src/client/dashboard/enhancementswindow/enhancements.window.styl
@@ -8,14 +8,17 @@
   overflow-x hidden
 
 .enhancement-card
-  display flex
-  justify-content center
-  align-items center
-  width 275px
+  width 255px
   height 120px
-  margin 5px
+  margin 12px
   background-color whitesmoke
   border-radius 1em
+  opacity 0.5
+  text-align center
 
   div
     display block
+    margin 3px
+
+.enhancement-card.owned
+  opacity 1
