--- a/src/client/dashboard/missionswindow/missionswindow.styl
+++ b/src/client/dashboard/missionswindow/missionswindow.styl
@@ -4,3 +4,12 @@
   height 460px
   width 999px
   border 1px solid maroon
+
+#MissionAcceptButtons
+  position absolute
+  width 200px
+  height 460px
+
+.mission-accept-button
+  margin 10px
+  display block
