--- a/src/client/dashboard/statuseswindow/statuses.window.styl
+++ b/src/client/dashboard/statuseswindow/statuses.window.styl
@@ -6,12 +6,21 @@
   align-items center
 
 .status-card
-  display flex
-  justify-content center
-  align-items center
   margin 10px
+  text-align center
   width 175px
   height 265px
   border-radius 1em
   background-color mintcream
   border 1px solid blue
+  opacity 0.5
+
+  div
+    margin 5px
+    display block
+
+  button
+    margin 5px
+
+.status-card.owned
+  opacity 1
