mission pictures, smoothing of game play

--- a/src/client/agents/agentequipcontent.styl
+++ b/src/client/agents/agentequipcontent.styl
@@ -24,3 +24,11 @@
     left 910px
     width 540px
     height 300px
+
+  #DismissAgentButton
+    position absolute
+    top 290px
+    left 1010px
+    width 150px
+    height 45px
+    background-color black
