--- a/src/client/briefing/activemission/actualmissioncard.styl
+++ b/src/client/briefing/activemission/actualmissioncard.styl
@@ -1,3 +1,23 @@
+#ActualMissionTasks
+  display flex
+  flex-direction row
+  flex-wrap wrap
+  align-items center
+  justify-content center
+  height 255px
+  width 550px
+
+#AgentAssignmentsContainer
+  display flex
+  flex-direction row
+  flex-wrap wrap
+  align-items center
+  justify-content center
+  position absolute
+  bottom 75px
+  width 545px
+  height 300px
+
 .mission-card.actual
   position relative
   top 15px
@@ -6,12 +26,13 @@
   height 680px
   border 2px solid black
 
-.mission-title.actual
-  font-size 2.5em
-  text-align center
-
 .task.actual
+  display flex
+  flex-direction row
+  flex-wrap wrap
+  align-items center
+  justify-content center
   position static
-  margin 15px
+  margin 5px
   margin-right 35px
   width 200px
