--- a/src/client/mission/missioncard/results/missionresult.styl
+++ b/src/client/mission/missioncard/results/missionresult.styl
@@ -1,12 +1,11 @@
 .mission-result
   padding-left 5px
+  font-size 1.3em
 
 li.mission-result.reward.task
   margin 0
   padding 0
-  height 30px
 
 li.mission-result.loss.task
   margin 0
   padding 0
-  height 30px
