--- a/src/client/briefing/activemission/agentassignment.styl
+++ b/src/client/briefing/activemission/agentassignment.styl
@@ -1,23 +1,29 @@
 .agent-assignment
-  position absolute
+  // position absolute
+  display flex
+  flex-directon row
+  flex-wrap wrap
+  justify-content center
+  align-items center
+  text-align center
   list-style none
-  width 265px
-  height 150px
+  width 260px
+  height 144px
   margin 3px
   border 1px solid darkslategrey
 
-#AgentAssignment1
-  top 285px
-  left 5px
-
-#AgentAssignment2
-  top 285px
-  left 275px
-
-#AgentAssignment3
-  top 440px
-  left 5px
-
-#AgentAssignment4
-  top 440px
-  left 275px
+// #AgentAssignment1
+//   top 285px
+//   left 5px
+//
+// #AgentAssignment2
+//   top 285px
+//   left 275px
+//
+// #AgentAssignment3
+//   top 440px
+//   left 5px
+//
+// #AgentAssignment4
+//   top 440px
+//   left 275px
