--- a/src/client/briefing/briefing.styl
+++ b/src/client/briefing/briefing.styl
@@ -4,35 +4,36 @@
   margin-left -820px
   width 1640px
   height 860px
+  border 1px solid darkslategrey
 
 #BriefingMissionShiftRight
   position absolute
-  top 50px
-  left 1000px
+  top 265px
+  left 1110px
   width 0
   height 0
-  border-top 50px solid transparent
-  border-left 100px solid darkred
-  border-bottom 50px solid transparent
+  border-top 30px solid transparent
+  border-left 60px solid darkred
+  border-bottom 30px solid transparent
 
 #BriefingMissionShiftLeft
   position absolute
-  top 50px
-  left 330px
+  top 265px
+  left 480px
   width 0
   height 0
-  border-top 50px solid transparent
-  border-right 100px solid darkred
-  border-bottom 50px solid transparent
+  border-top 30px solid transparent
+  border-right 60px solid darkred
+  border-bottom 30px solid transparent
 
 #MissionsListTable
   position absolute
   top 80px
-  left 1150px
+  left 20px
 
   table
     text-align center
-    width 300px
+    width 350px
     border 3px solid white
 
     th
