--- a/src/client/mission/missioncard/missiontitle.styl
+++ b/src/client/mission/missioncard/missiontitle.styl
@@ -1,17 +1,15 @@
 .mission-title
+  position relative
   color white
   font-weight bold
   font-size 1.1em
   text-align center
   width 548px
-  height 60px
+  height 50px
   background-color darkred
   border 1px solid black
+  top 255px
+  font-size 2.2em
 
-.mission-title.briefing
-  width 186px
-  height 35px
-
-.mission-title.special
-  width 186px
-  height 35px
+.mission-title.actual
+  top 0px
