--- a/src/client/mission/missioncard/results/missionresultlist.styl
+++ b/src/client/mission/missioncard/results/missionresultlist.styl
@@ -1,12 +1,14 @@
 .mission-result-list
+  display flex
+  flex-direction row
+  flex-wrap wrap
+  align-items center
+  justify-content center
   position absolute
   box-shadow 0 0 10px red inset
   background-color gold
   margin 0
   padding 0
-
-.mission-result-list.actual
-  font-size 1.2em
 
 .mission-result-list.task
   font-size 1.5em
@@ -18,6 +20,9 @@
 .mission-result-list.reward.task
   bottom 105px
   background-color lime
+
+.mission-result-list.actual
+  font-size 1.2em
 
 .mission-result-list.loss.actual
   position absolute
