--- a/src/client/navs/briefingtodashboard.styl
+++ b/src/client/navs/briefingtodashboard.styl
@@ -1,7 +1,7 @@
 #BriefingToDashboard
   position absolute
-  top 10px
-  left 10px
+  top 130px
+  right 10px
   width 150px
   height 50px
   background-color darkblue
