sign-up fixed, WIP timers

--- a/src/client/agents/agentcard/agentcard.styl
+++ b/src/client/agents/agentcard/agentcard.styl
@@ -4,7 +4,8 @@
   list-style-type none
   height 144px
   width 260px
-  margin-right 5px
+  margin-left 2px
+  margin-right 2px
   border 2px solid darkblue
   background-color dimgray
   z-index 1
