--- a/src/client/agents/agentcard/agentstatcounter.styl
+++ b/src/client/agents/agentcard/agentstatcounter.styl
@@ -1,21 +1,17 @@
 /*Agent Stat Counter*/
-.agent-stat-counter {
+.agent-stat-counter
   position absolute
   padding 5px 5px 5px 5px
   margin 5px 5px 5px 5px
   width 10px
   height 22px
-}
 
-.agent-stat-counter.operations {
+.agent-stat-counter.operations
   top 10px
-}
 
-.agent-stat-counter.electronics {
+.agent-stat-counter.electronics
   top 55px
-}
 
-.agent-stat-counter.stealth {
+.agent-stat-counter.stealth
   top 100px
-}
 /**/
