--- a/src/client/mission/missioncard/actions.styl
+++ b/src/client/mission/missioncard/actions.styl
@@ -77,7 +77,7 @@
   background-size 100% 100%
   background-repeat no-repeat
 
-.action.improv_el.mission.electronics
+.action.improv.mission.electronics
   background url('../../../../assets/img/missions/actions/improv_el.jpg')
   background-size 100% 100%
   background-repeat no-repeat
