refactor, enh desc, zoho email verify

--- a/src/client/auth/login.styl
+++ b/src/client/auth/login.styl
@@ -39,3 +39,10 @@
   left 0
   top 2px
   background-color royalblue
+
+#LoginToSignup
+  background-color gold
+  position absolute
+  right 650px
+  top 300px
+  opacity 0.5
