--- a/src/client/auth/signup.styl
+++ b/src/client/auth/signup.styl
@@ -35,3 +35,10 @@
   top 2px
   background-color gold
   z-index 1000
+
+#SignupToLogin
+  position absolute
+  top 250px
+  right 650px
+  background-color blue
+  opacity 0.5
