--- a/src/client/dashboard/enhancementswindow/enhancements.window.styl
+++ b/src/client/dashboard/enhancementswindow/enhancements.window.styl
@@ -20,5 +20,31 @@
     display block
     margin 3px
 
+.capability-enhancement-card
+  width 255px
+  height 240px
+  margin 12px
+  background-color whitesmoke
+  border-radius 1em
+  opacity 0.5
+  text-align center
+
+  div
+    display block
+    margin 3px
+
+.leadership-enhancement-card
+  width 255px
+  height 240px
+  margin 12px
+  background-color whitesmoke
+  border-radius 1em
+  opacity 0.5
+  text-align center
+
+  div
+    display block
+    margin 3px
+
 .enhancement-card.owned
   opacity 1
