--- a/src/client/command/command.styl
+++ b/src/client/command/command.styl
@@ -19,3 +19,14 @@
   position absolute
   left 160px
   z-index 1
+
+#CommandEmailSupport
+  font 1.7em
+  position absolute
+  font-weight bold
+  border 1px solid black
+  width 820px
+  height 50px
+  text-align center
+  top 800px
+  left 410px
