mission screen adjustments

--- a/src/client/auth/login.styl
+++ b/src/client/auth/login.styl
@@ -46,3 +46,10 @@
   right 650px
   top 300px
   opacity 0.5
+
+#LoginToIntro
+  position absolute
+  background-color darkgreen
+  right 10px
+  top 10px
+  opacity 0.8
