--- a/src/client/mission/tabletoptier/tabletop/tabletop.styl
+++ b/src/client/mission/tabletoptier/tabletop/tabletop.styl
@@ -1,7 +1,7 @@
 #TableTop
-  position relative
+  position absolute
   width 550px
-  height 580px
+  height 550px
   margin-left 10px
   margin-top 50px
   border 2px solid maroon
