--- a/src/client/mission/tabletoptier/dicebin/dicebin.styl
+++ b/src/client/mission/tabletoptier/dicebin/dicebin.styl
@@ -1,3 +1,13 @@
+#DiceBin
+  position absolute
+  width 160px
+  height 160px
+  top 670px
+  left 205px
+  border 1px solid darkgreen
+  text-align center
+  padding 10px
+
 /*.dice-bin*/
 .dice-bin, .dice-bin::before, .dice-bin::after {
   position: absolute;
@@ -13,8 +23,6 @@
   background: url("//blog.codepen.io/wp-content/uploads/2012/06/Button-White-Large.png") no-repeat 50%/70% rgba(0, 0, 0, 0.1);
   color: #FF9900;
   box-shadow: inset 0 0 0 1px rgba(105, 202, 98, 0.5);
-  margin-top: 670px;
-  margin-left: 205px;
 }
 
 .dice-bin::before, .dice-bin::after {
