minor changes, trying to fix sign up, new color design

--- a/src/client/agents/agentcard/agentcard.styl
+++ b/src/client/agents/agentcard/agentcard.styl
@@ -131,9 +131,9 @@
   border 1px solid grey
 
 .showcased.agent-picture
-  margin-top 20px
-  margin-left -20px
   background-size 100%
+  top 0px
+  left 0px
 
 .showcased.agent-equipment-picture-placeholder
   width 60px
