--- a/src/client/help/helpscreen.styl
+++ b/src/client/help/helpscreen.styl
@@ -11,9 +11,9 @@
   left 370px
   width 900px
   height 858px
-  overflow-x hidden
   font-weight bold
   text-align center
+  color gold
 
 .help-content::-webkit-scrollbar
   display none
