--- a/src/client/app/app.styl
+++ b/src/client/app/app.styl
@@ -15,10 +15,11 @@
 html,
 body
   height 100%
-  background-color lightgray
+  background-image url('../../../assets/img/bg/grey_neopren.jpg')
   font-family 'Segoe UI', 'Lucida Grande','Ubuntu','sans-serif'
   font-size 16px
   line-height 1.5
+  overflow hidden
 /*
 input
   -webkit-appearance textfield
